# systems-website

./: .gitignore  .gitlab-ci.yml  README.md  index.html  index.js  jsconfig.json  package.json  setup_rust_tools.sh
.github/workflows/: main.yml
_drive/: Files.js  Sheets.js  Utility.js  index.js  package.json  tools.js
_drive/config/: config.json
_drive/credentials/: google-jwt.json  token_v2.json
_drive/files/: sheets.json
_drive/sheets/: apiAuth.js  drive.js  spreadsheet.js
harp/: package.json
harp/scripts/: _dev_build.js
harp/src/: index.jade
public/: index.html  manifest.json
public/api/: courses.json  hitlist.json  hitlist_announcements.json  hitlists.json  notifications.json  people.json  people_2020.json  phd_projects.json  projects.json  projects_old_2017_18.json  projects_old_2018_19.json  projects_old_2019_20.json  projects_old_2020_21.json  texte.json
rust-project/: Cargo.toml
rust-project/src/: main.rs
scripts/: _dev_build.js  build.js  dev.js  server.js
src/: Homepage.vue  _config.json  _data.json  _harp.json  _layout.jade  common.scss  index.css  index.jade  index.js  main.js  registerServiceWorker.js
src/_js/: index.js
src/_js/_config/: webpack.dev.config.js
src/_js/_modules/: menu.js
src/_partials/about/: about.jade
src/_partials/contact/: contact.jade
src/_partials/header/: header.jade  menu.jade  title.jade
src/bachelor/: index.jade
src/components/PhD/: index.js
src/contact/: index.jade
src/master/: index.jade
src/people/: index.jade
src/phd/: index.jade
src/routes/: index.js
src/styles/: index.scss
(+76 files in other folders)
