[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
reqwest = {version = "*", features = ["json"]}
tokio = {version = "1", features = ["full"]}
anyhow = "*"
yup-oauth2 = "*"
image = "*"
curl = "*"
convert_case = "*"
